# hm_27

./: db.sqlite3  pyproject.toml
ads/: apps.py  models.py  serializers.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_name.py  0002_initial.py  0003_selection.py
ads/urls/: ad.py  category.py
ads/views/: ad.py  category.py  selection.py
data/: ad.json  ads.csv  ads.json  csv_to_json.py  location.json  user.json
hunting/: settings.py  urls.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_location_lat_alter_location_lng.py
