[tool.poetry]
name = "ads"
version = "0.1.0"
description = ""
authors = ["Rezvanceva <elle81998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.3"
django-admin = "^2.0.1"
psycopg2 = "^2.9.5"
pillow = "^9.3.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
